got the fundamentals working

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   Find my match!
 </div>
 
-<div>
-  <input />
+<div class="t-class">
+  T
 </div>
 
-<div>
-  <button onclick="sayHiYo()">sign up</button>
+<div class="selection-container">
+  <button class="btn-choice">t</button>
+  <button class="btn-choice">x</button>
+  <button class="btn-choice">h</button>
 </div>
 
 <script src="/index.js"></script>
