got the game working in the ui

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   Find my match!
 </div>
 
-<div class="t-class">
+<div id="RedZane" class="t-class">
   T
 </div>
 
-<div class="selection-container">
+<div id="wolfhoundjesse" class="selection-container">
   <button class="btn-choice">t</button>
   <button class="btn-choice">x</button>
   <button class="btn-choice">h</button>
